# DirectCumulant

./: .gitignore  v2int.cpp
Acceptance/: CMakeLists.txt  CalFlow.sh  CalRes.h  CalibRes.C  CalibRes.sh  Comparison.C  DrawTGraph.C  FlowANA.C  FlowANA.LinkDef.h  FlowANA.h  calculateCalibFlow.C  calculateFlow.C  clearROOT.sh  hVana.C  hVana.h  mergeFlow.sh  refflowratio.C  refflowv2plot.C  testv2plot.C  v2plot.C  v2plot_test.C
Acceptance/EventPlane/: AcceptanceRatio.C  CalFlow.sh  FlowANA.C  FlowANA.h  v2plot.C
Acceptance/testFixStatError/: CalFlow.sh  FlowANA.C  FlowANA.h  clearLOG.sh  clearROOT.sh  mergeFlow.sh  testcalculateFlow.C  v2plot.C
Flow_for_Particles_journal/: CMakeLists.txt  FlowANA.C  FlowANA.h  RunFlowAnalysis.C  RunFlowAnalysis.C~~  constants.C  main.cpp  utilities.C
Flow_for_Particles_journal/FlowAnalysis/: CMakeLists.txt  FlowAnalysis.LinkDef.h  FlowAnalysisWithEtaSubEventPlane.cxx  FlowAnalysisWithFHCalEventPlane.cxx  FlowAnalysisWithFHCalEventPlane.h  FlowAnalysisWithFHCalEventPlaneWRTSecondHarm.cxx  FlowAnalysisWithFHCalEventPlaneWRTSecondHarm.h  FlowAnalysisWithLeeYangZeros.cxx  FlowAnalysisWithLeeYangZeros.h  FlowAnalysisWithQCumulant.cxx  FlowAnalysisWithQCumulant.h  FlowAnalysisWithQCumulantGenericFramework.cxx  FlowAnalysisWithQCumulantGenericFramework.h  FlowAnalysisWithThreeEtaSubEventPlane.cxx  FlowAnalysisWithThreeEtaSubFHCalEventPlane.cxx  FlowAnalysisWithThreeEtaSubFHCalEventPlane.h  FlowAnalysisWithThreeEtaSubFHCalEventPlaneWRTSecondHarm.cxx  FlowAnalysisWithThreeEtaSubFHCalEventPlaneWRTSecondHarm.h  QVector.cxx  QVector.h
Flow_for_Particles_journal/macros/: CompareV24_Standard_vs_TwoSub.C  DrawTGraphImp.C  PlotV2DifferentialChargedHadrons.C  PlotV2DifferentialChargedHadronsFor10_40Centrality.C  PlotV2DifferentialChargedHadronsFor10_40Centrality_115.C  PlotV2DifferentialChargedHadronsFor10_40Centrality_AMPT08.C  PlotV2DifferentialChargedHadronsFor10_40Centrality_UrQMD.C  PlotV2DifferentialChargedHadronsFor10_40Centrality_UrQMD_11.C  PlotV2DifferentialChargedHadronsFor10_40Centrality_withFHCal_11GeV.C  PlotV2LYZ.C  (+11 more)
(+1226 files in other folders)
